<resources>
    <string name="app_name">Driving School</string>
    <string name="title_activity_lesson">Map</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="bienvenu">Bienvenu sur l\'application Driving School</string>
    <string name="presentation">Driving School requiert un identifiant et un mot de passe pour accéder à l\'application. Si vous souhaitez utiliser cette application pour votre auto-école veuillez contacter la société Stormzy Inc. pour plus d\'informations sur le fonctionnement de l\'application et de ses tarifs</string>
    <string name="contact">06.12.34.45.56</string>
    <string name="mail">support@stormzy.com</string>
    <string name="skip">passer cette étape</string>
    <string name="register">create your account</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
