<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.splashscreen.SplashActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#3b3b3b">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenu"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/presentation"
        android:textAlignment="center"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contact"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mail"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:onClick="goToMain"
        />

</LinearLayout>
